--- a/public/views/index.html
+++ b/public/views/index.html
@@ -102,7 +102,7 @@
         document.getElementsByName("name")[0].style.border = "1px solid hsl(0, 100%, 66%)"
         document.getElementsByName("name")[0].parentElement.lastElementChild.style.display = "block";
         document.getElementsByName("name")[0].parentElement.lastElementChild.textContent = "Invalid name and surname"
-©        test = false
+        test = false
       }
 
       else{
